--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -95,6 +95,59 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
+.collapsible {
+  text-align: right;
+  font-size: 18px;
+}
+
+.Collapsible__trigger {
+  margin-right: 100px;
+}
+
+.collapsibleContent {
+  width: 100%;
+}
+
+#filterDiv {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  right: 100px;
+}
+
+#searchBar {
+  border-color: hsl(0, 0%, 80%);
+  border-width: 0px;
+  outline: none;
+  border-radius: 4px;
+  margin-right: 2px;
+  font: inherit;
+  padding-left: 5px;
+  width: 190px;
+}
+
+#searchBar:focus {
+  border-color: #0070f3;
+}
+
+#filterBar {
+  width: 130px;
+  margin-left: 2px;
+}
+
+#filterBar > * {
+  margin-left: 2px;
+  border-width: 0px;
+}
+
+#filterBar * {
+  color: hsl(0, 0%, 45%);
+}
+
+.singleValue {
+  color: hsl(0, 0%, 45%);
+}
+
 #shipImage {
   width: 325px;
   height: 160px;
@@ -193,6 +246,15 @@
   }
   #homeMain {
     width: 100%;
+  }
+  #filterDiv {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    right: 0px;
+  }
+  .Collapsible__trigger {
+    margin-right: 25px;
   }
 }
 
